--- a/templates/JavaScript.xml
+++ b/templates/JavaScript.xml
@@ -1,5 +1,5 @@
 <templateSet group="JavaScript">
-  <template name="cnl" value="console.log($itme$)" shortcut="ENTER" description="" toReformat="false" toShortenFQNames="true">
+  <template name="cnl" value="console.log($itme$);" shortcut="ENTER" description="" toReformat="false" toShortenFQNames="true">
     <variable name="itme" expression="" defaultValue="" alwaysStopAt="true" />
     <context>
       <option name="JAVA_SCRIPT" value="true" />
@@ -22,6 +22,11 @@
   <template name="await test" value="// eslint-disable-next-line no-unused-vars&#10;const express = require('express');&#10;const $modulename$ = require('$path$');&#10;&#10;const router = express.Router();&#10;const app = express();&#10;const port = process.env.PORT || 2020;&#10;&#10;router.get('/test', async (req, res) =&gt; {&#10;  const result = await $modulename$;&#10;  console.log(result);&#10;  res.json(result);&#10;});&#10;&#10;app.use(router);&#10;&#10;app.listen(port, (err) =&gt; {&#10;  if (err) console.log(err);&#10;  else console.log('서버가 가동되었습니다.!!!!!');&#10;});&#10;" shortcut="ENTER" description="" toReformat="false" toShortenFQNames="true">
     <variable name="modulename" expression="" defaultValue="" alwaysStopAt="true" />
     <variable name="path" expression="" defaultValue="" alwaysStopAt="true" />
+    <context>
+      <option name="JAVA_SCRIPT" value="true" />
+    </context>
+  </template>
+  <template name="then" value=".then((result) =&gt; {&#10;  console.log(result);&#10;})&#10;.catch((err) =&gt; {&#10;  console.error(err);&#10;});" shortcut="ENTER" toReformat="false" toShortenFQNames="true">
     <context>
       <option name="JAVA_SCRIPT" value="true" />
     </context>
