--- a/templates/JavaScript.xml
+++ b/templates/JavaScript.xml
@@ -26,7 +26,7 @@
       <option name="JAVA_SCRIPT" value="true" />
     </context>
   </template>
-  <template name="then" value=".then((result) =&gt; {&#10;  console.log(result);&#10;})&#10;.catch((err) =&gt; {&#10;  console.error(err);&#10;});" shortcut="ENTER" toReformat="false" toShortenFQNames="true">
+  <template name="then" value=".then((result) =&gt; {&#10;  console.log(result);&#10;})&#10;.catch((err) =&gt; {&#10;  console.error(err);&#10;});" shortcut="ENTER" description="" toReformat="false" toShortenFQNames="true">
     <context>
       <option name="JAVA_SCRIPT" value="true" />
     </context>
