--- a/templates/user.xml
+++ b/templates/user.xml
@@ -12,4 +12,14 @@
       <option name="JAVA_SCRIPT" value="true" />
     </context>
   </template>
+  <template name="model" value="const models = require('../../models/wa/init-models')();" shortcut="ENTER" toReformat="false" toShortenFQNames="true">
+    <context>
+      <option name="JAVA_SCRIPT" value="true" />
+    </context>
+  </template>
+  <template name="async" value="async (req, res) =&gt; {&#10;    &#10;}" shortcut="ENTER" toReformat="false" toShortenFQNames="true">
+    <context>
+      <option name="JAVA_SCRIPT" value="true" />
+    </context>
+  </template>
 </templateSet>
