--- a/templates/JavaScript.xml
+++ b/templates/JavaScript.xml
@@ -31,7 +31,7 @@
       <option name="JAVA_SCRIPT" value="true" />
     </context>
   </template>
-  <template name="reqres" value="async (req, res) =&gt; {&#10;    try {&#10;    &#10;    } catch(err) {&#10;        res.json({code:2, message: process.env.DB_ERROR_MSG, error: err.message})&#10;    }&#10;}" shortcut="ENTER" toReformat="false" toShortenFQNames="true">
+  <template name="reqres" value="async (req, res) =&gt; {&#10;    try {&#10;    &#10;    } catch(err) {&#10;        res.json({code:2, message: process.env.DB_ERROR_MSG, error: err.message})&#10;    }&#10;}" shortcut="ENTER" description="" toReformat="false" toShortenFQNames="true">
     <context>
       <option name="JAVA_SCRIPT" value="true" />
     </context>
