--- a/templates/user.xml
+++ b/templates/user.xml
@@ -22,4 +22,9 @@
       <option name="JAVA_SCRIPT" value="true" />
     </context>
   </template>
+  <template name="tr" value="try {&#10;&#10;} catch(error) {&#10;&#10;}" shortcut="ENTER" toReformat="false" toShortenFQNames="true">
+    <context>
+      <option name="JAVA_SCRIPT" value="true" />
+    </context>
+  </template>
 </templateSet>
