--- a/templates/user.xml
+++ b/templates/user.xml
@@ -22,7 +22,7 @@
       <option name="JAVA_SCRIPT" value="true" />
     </context>
   </template>
-  <template name="tr" value="try {&#10;&#10;} catch(error) {&#10;&#10;}" shortcut="ENTER" toReformat="false" toShortenFQNames="true">
+  <template name="tr" value="try {&#10;&#10;} catch(error) {&#10;&#10;}" shortcut="ENTER" description="" toReformat="false" toShortenFQNames="true">
     <context>
       <option name="JAVA_SCRIPT" value="true" />
     </context>
